--- a/app/views/welcome/_dialogs.html.slim
+++ b/app/views/welcome/_dialogs.html.slim
@@ -33,7 +33,7 @@
 						span.glyphicon.glyphicon-floppy-disk
 						|  Create it!
 
-.modal.fade#upload_torrent_dialog
+.modal.fade#create_torrent_dialog
 	.modal-dialog
 		.modal-content
 			.modal-header
@@ -42,14 +42,4 @@
 					| Publish a torrent to
 					span ng-bind="selectedFeed.name"
 			.modal-body
-				input type="hidden" name="feed_id" value="{{selectedFeed.id}}"
-				.form-group
-					label for="torrent_name" Name
-					input type="text" id="torrent_name" name="torrent[name]" placeholder="Demo Package X" required="true" class="form-control"
-					p.help-block Human-readable name for the torrent. You probably want to use the same name used when creating the .torrent to avoid confusion.
-				.form-group
-					label for="torrent_file"
-					input type="file" id="torrent_file" name="torrent[file]" required="true"
-					p.help-block Upload a .torrent file from your computer.
-			/ .modal-footer
-				button.btn.button-default type="button" data-dismiss="modal" Close
+				= render partial: 'torrents/form'
