--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -39,7 +39,7 @@
 		box-shadow: 0 20px 20px #333;
 		border-radius: 2px;
 		border: 1px solid #ccc;
-		margin: 20px;
+		// margin: 20px;
 		padding: 20px;
 	}
 
