--- a/app/views/welcome/dashboard.html.slim
+++ b/app/views/welcome/dashboard.html.slim
@@ -5,38 +5,7 @@
 #dashboard ng-controller="FeedController"
 	= render partial: 'welcome/dialogs'
 
-
-	#sidebar-wrapper
-		#feeds
-			div
-				h2 Data Feeds
-				table.table.table-condensed
-					thead
-						tr
-							th
-								a href="" ng-click="reverse = !reverse; predicate = 'name'; " Name
-							th
-								a href="" ng-click="reverse = !reverse; predicate = 'torrents.length'; " Torrents
-							th
-								a href="" ng-click="reverse = !reverse; predicate = 'updated_at'; " Updated
-					tbody
-						tr.feed_link ng-repeat="feed in feeds | orderBy:predicate:reverse" ng-click="selectFeed(feed.slug)" ng-class="{selected: feed === selectedFeed}"
-								td
-									b ng-bind="feed.name"
-								td ng-bind="feed.torrents.length"
-								td
-									small ng-bind="feed.updated_at | relativeDate"
-
-				p.muted
-					| Select a feed to show torrents that have been published to it. Confused? See #{link_to "Getting Started", 'getting_started'}.
-
-
-				- if can? :create, Feed
-					.btn-group
-						button.btn.btn-default ng-click="newFeedDialog()" role="button"
-							span.glyphicon.glyphicon-plus-sign
-							|  Create a feed.
-
+	#sidebar-wrapper ng-include="'/dashboard/feeds'"
 
 	#page-content-wrapper
 		.container-fluid
@@ -49,10 +18,6 @@
 									span.icon.icon-copy
 									|  Torrents
 							li
-								a href="#permissions" data-toggle="tab" 
-									span.icon.icon-group
-									|  Permissions
-							li
 								a href="#settings" data-toggle="tab"
 									span.icon.icon-gear
 									|  Settings
@@ -60,13 +25,9 @@
 						
 						.tab-content
 							.tab-pane.active#torrents
-								div ng-include="templateUrl('torrents')"
-							.tab-pane#permissions
-								div ng-include="templateUrl('permissions')"
+								ng-include src="'/dashboard/torrents'"
+
 							.tab-pane#settings
-								div ng-include="templateUrl('settings')"
+								ng-include src="'/dashboard/settings'"
 
-
-			.row
-				.col-md-12#torrent_details
 
