Massive amount of work to move to AngularJS.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@
  *= require_self
  *= require_tree .
  *= require devise_bootstrap_views
+ *= require angular-growl-v2
  */
 
 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
