--- a/app/views/welcome/dashboard.html.slim
+++ b/app/views/welcome/dashboard.html.slim
@@ -28,8 +28,8 @@
 					  i.icon.icon-rss
 					  |  Data RSS Feed
 					pre
-						a href="{{$location.host}}/feeds/{{selectedFeed.slug}}.rss"
-							| {{urlRoot}}/feeds/{{selectedFeed.slug}}.rss
+						a href="{{$location.host}}/feeds/{{selectedFeed.slug}}.rss?authentication_token=#{current_user.authentication_token}"
+							| {{urlRoot}}/feeds/{{selectedFeed.slug}}.rss?authentication_token=#{current_user.authentication_token}
 					p.help-block If you'd like to subscribe to this entire feed, jam this URL into your BitTorrent client! (Shhhh.. don't share it! This URL is specifically for YOU, and includes a secret token that should not be shared.)
 
 			/ .row
