--- a/app/views/welcome/settings.html.slim
+++ b/app/views/welcome/settings.html.slim
@@ -34,7 +34,7 @@ ul
 
 - if can? :manage, @feed
 	= render 'feeds/form'
-	button.pull-right.btn.btn-lg.btn-danger ng-click="deleteFeed()" ng-confirm-click="This will permanently delete the feed and all torrents from the system. Existing subscribers will no longer receive data. This cannot be undone. Are you completely 100% sure you want to delete this feed?"
+	button.pull-right.btn.btn-lg.btn-danger ng-click="deleteFeed(selectedFeed)" ng-confirm-click="This will permanently delete the feed and all torrents from the system. Existing subscribers will no longer receive data. This cannot be undone. Are you completely 100% sure you want to delete this feed?"
 		= text_with_icon('Delete this feed forever!', 'trash')
 
 - else
