--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,7 +11,7 @@ html ng-app="BitToriousApp"
     = javascript_include_tag "application"
 
     / Add Google Maps APP support.
-    script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPaue3svO2VOPGOwEcAGZjzcquHonsl7E&sensor=true"
+    script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPaue3svO2VOPGOwEcAGZjzcquHonsl7E"
     = csrf_meta_tags
     = yield(:head)
     = yield(:javascripts)
