--- a/app/views/welcome/torrents.html.slim
+++ b/app/views/welcome/torrents.html.slim
@@ -108,11 +108,17 @@
 	.col-md-12  ng-if="selectedTorrent.active_peers.length > 0"
 		h3 Node Map
 		div#map_canvas
-		javascript:  
-		  // Initialize the map.
-		  var mapOptions = {
-			center: new google.maps.LatLng(40.397, -98.644),
-			zoom: 4
-		  };
-		  var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
-		  refreshMap();
+		javascript:
+			if(!mapInitialized) {
+			  removeMarkers();
+			} else {
+			  var mapOptions = {
+			    zoom: 4,
+			    center: new google.maps.LatLng(40.397, -98.644)
+			  };
+			  var tmp = document.getElementById("map_canvas");
+			  if(tmp != null) {
+			    map = new google.maps.Map(tmp, mapOptions);
+			    mapInitialized = true;
+			  }
+			}
