Trying to fix Google Maps integration.

--- a/app/views/welcome/torrents.html.slim
+++ b/app/views/welcome/torrents.html.slim
@@ -109,7 +109,7 @@
 		h3 Node Map
 		div#map_canvas
 		javascript:
-			if(!mapInitialized) {
+			if(mapInitialized) {
 			  removeMarkers();
 			} else {
 			  var mapOptions = {
