--- a/app/views/feeds/_form.html.slim
+++ b/app/views/feeds/_form.html.slim
@@ -1,16 +1,23 @@
 form#feed_form
 
 	.form-group
-		label for="feed_name"
+		label for="feed_name" Name
 		input#feed_name.form-control type="text" name="feed[name]" placeholder="My Awesome Data Feed" required="true" ng-model="selectedFeed.name"
 				
 	.form-group
-		label for="feed_description"
+		label for="feed_description" Description
 		textarea#feed_description.form-control name="feed[description]" placeholder="Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta acconsectetur ac, vestibulum at eros." rows="4" required="true" ng-model="selectedFeed.description"
 
 	.checkbox
 		label
 			input#form_enable_public_archiving type="checkbox" name="form[enable_public_archiving]" ng-model="selectedFeed.enable_public_archiving"
 				| Enable archiving of all torrents published to this feed to anonymous volunteer peers. All feed data will effectively becomes publically-accessable.
-		
-	buttons type="submit" class="btn btn-primary btn-lg" Save
+	
+	.row
+		.col-md-9
+			button.btn.btn-primary.btn-lg type="submit" ng-click="updateFeed()"
+				= text_with_icon('Save', 'floppy-disk')
+		.col-md-3
+			button.btn.btn-lg.btn-danger ng-click="deleteFeed(selectedFeed)" ng-confirm-click="This will permanently delete the feed and all torrents from the system. Existing subscribers will no longer receive data. This cannot be undone. Are you completely 100% sure you want to delete this feed?"
+				= text_with_icon('Delete this feed forever!', 'trash')
+
