--- a/app/views/welcome/settings.html.slim
+++ b/app/views/welcome/settings.html.slim
@@ -1,5 +1,8 @@
 .row
 
+	.col-md-12 ng-if="selectedFeed.can_manage"
+		= render 'feeds/form'
+
 	.col-md-6
 		.h2 Authorized Users
 		table.table.table-condensed.table-striped#authorized-users
@@ -46,11 +49,3 @@
 				li = u.name
 
 
-
-- if can? :manage, @feed
-	= render 'feeds/form'
-	button.pull-right.btn.btn-lg.btn-danger ng-click="deleteFeed(selectedFeed)" ng-confirm-click="This will permanently delete the feed and all torrents from the system. Existing subscribers will no longer receive data. This cannot be undone. Are you completely 100% sure you want to delete this feed?"
-		= text_with_icon('Delete this feed forever!', 'trash')
-
-- else
-	p.lead Sorry, but you don't have permission to change this feeds settings!
