--- a/app/views/welcome/torrents.html.slim
+++ b/app/views/welcome/torrents.html.slim
@@ -1,3 +1,25 @@
+
+.row ng-show="selectedFeed"
+	.col-md-9
+		h1 ng-bind="selectedFeed.name"
+		p ng-bind="selectedFeed.description"
+		pre
+			h4
+			  i.icon.icon-rss
+			  |  Data RSS Feed
+			a href="{{$location.host}}/feeds/{{selectedFeed.slug}}.rss?authentication_token=#{current_user.authentication_token}"
+				| {{urlRoot}}/feeds/{{selectedFeed.slug}}.rss?authentication_token=#{current_user.authentication_token}
+		p.help-block If you'd like to subscribe to this entire feed, jam this URL into your BitTorrent client! (Shhhh.. don't share it! This URL is specifically for YOU, and includes a secret token that should not be shared.)
+
+	.col-md-3
+		div ng-if="selectedFeed.can_manage"
+			h1 &nbsp;
+			button.btn.btn-primary href="#create_torrent_dialog" role="button" ng-click="newTorrentDialog()"
+				span.glyphicon.glyphicon-upload
+				|  Register a torrent.
+
+			p.help-block
+				small To publish a new data .torrent to this feed, create the .torrent metadata file on your local machine, and then upload it via this dialog.
 .row
 
 	.col-md-12
