--- a/app/views/admin_mailer/deny_application.html.slim
+++ b/app/views/admin_mailer/deny_application.html.slim
@@ -1,6 +1,5 @@
 doctype html
 html
   body
-    | We are sorry to inform you that your account application to BitTorious has been denied.
-    br
-    | Bummer. :(
+    p We are sorry to inform you that your account application to BitTorious has been denied.
+    p Bummer. :(
