--- a/app/views/welcome/settings.html.slim
+++ b/app/views/welcome/settings.html.slim
@@ -2,6 +2,7 @@
 
 	.col-md-12 ng-if="selectedFeed.can_manage"
 		= render 'feeds/form'
+		hr
 
 	.col-md-6
 		.h2 Authorized Users
@@ -21,31 +22,28 @@
 						button.btn.btn-default ng-click="deletePermission(p)" = text_with_icon('Revoke', 'trash')
 
 	.col-md-6
-		h2 &nbsp;
-		h4 User Search
-		form role="form"
-			.form-group
-				/ label for="userFilterFormInput" User Search
-				input.form-control id="userFilterFormInput" placeholder="John Smith" ng-model="userSearch.text"
-		table.table.table-condensed.table-striped#unauthorized-users ng-show="userSearch.text.length > 0"
-			thead
-				tr
-					th
-						a ng-click="reverse = !reverse; predicate = 'name'; " Name
-					th Grant
-			tbody
-				tr ng-repeat="u in users | filter:userFilterMatch | orderBy:predicate:reverse" ng-show="selectedFeed" ng-if="!u.admin"
-					td ng-bind="u.name"
-					td
-						.btn-group
-							button.btn.btn-default ng-click="createPermission(u,'#{Permission::SUBSCRIBER_ROLE}')" = text_with_icon('Subscriber', 'download')
-							button.btn.btn-default ng-click="createPermission(u,'#{Permission::PUBLISHER_ROLE}')" = text_with_icon('Publisher', 'upload')
+		br
+		.well
+			h4 Authorize a user...
+			form role="form"
+				.form-group
+					input.form-control id="userFilterFormInput" placeholder="John Smith" ng-model="userSearch.text"
+			table.table.table-condensed.table-striped#unauthorized-users ng-show="userSearch.text.length > 0"
+				thead
+					tr
+						th
+							a ng-click="reverse = !reverse; predicate = 'name'; " Name
+						th Grant
+				tbody
+					tr ng-repeat="u in users | filter:userFilterMatch | orderBy:predicate:reverse" ng-show="selectedFeed" ng-if="!u.admin"
+						td ng-bind="u.name"
+						td
+							.btn-group
+								button.btn.btn-default ng-click="createPermission(u,'#{Permission::SUBSCRIBER_ROLE}')" = text_with_icon('Subscriber', 'download')
+								button.btn.btn-default ng-click="createPermission(u,'#{Permission::PUBLISHER_ROLE}')" = text_with_icon('Publisher', 'upload')
 
 
-		h4 Administrators
-		p Portal administrators always have access, so they won't be shown. 
-		ul
-			- User.where(admin: true).each do |u|
-				li = u.name
-
-
+			h4 Administrators
+			p The global portal administrators below always have access, so they won't show up in your search results. 
+			ul
+				li ng-repeat="u in users" ng-if="u.admin" ng-bind="u.name"
