--- a/app/views/feeds/_form.html.slim
+++ b/app/views/feeds/_form.html.slim
@@ -1,4 +1,4 @@
-form#update_feed_form role="form"
+form#update_feed_form role="form" name="update_feed_form"
 
 	.form-group
 		label for="feed_name" Name
@@ -18,11 +18,11 @@ form#update_feed_form role="form"
 		input#feed_replication_percentage.form-control type="number" min="1" max="100" step="1" required="required" ng-model="selectedFeed.replication_percentage"
 
 	
-	.row
-		.col-md-9
-			button.btn.btn-primary.btn-lg type="submit" ng-click="updateFeed()" ng-disabled="update_feed_form.$invalid"
-				= text_with_icon('Save', 'floppy-disk')
-		.col-md-3
-			button.btn.btn-lg.btn-danger ng-click="deleteFeed(selectedFeed)" ng-confirm-click="This will permanently delete the feed and all torrents from the system. Existing subscribers will no longer receive data. This cannot be undone. Are you completely 100% sure you want to delete this feed?"
-				= text_with_icon('Delete this feed forever!', 'trash')
+.row
+	.col-md-9
+		button.btn.btn-primary.btn-lg type="submit" ng-click="updateFeed()" ng-disabled="update_feed_form.$invalid"
+			= text_with_icon('Save', 'floppy-disk')
+	.col-md-3
+		button.btn.btn-lg.btn-danger ng-click="deleteFeed(selectedFeed)" ng-confirm-click="This will permanently delete the feed and all torrents from the system. Existing subscribers will no longer receive data. This cannot be undone. Are you completely 100% sure you want to delete this feed?"
+			= text_with_icon('Delete this feed forever!', 'trash')
 
