--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -43,7 +43,7 @@ header.navbar.navbar-default role="banner"
               li
                 = link_to 'View network status.', status_path
               li
-                = link_to 'Manage users.', manage_path
+                = link_to 'Manage users.', users_path
 
         li
           a href="#{edit_user_registration_path}"
