--- a/app/views/welcome/history.html.slim
+++ b/app/views/welcome/history.html.slim
@@ -7,4 +7,4 @@ p BitTorious was initially conceived when I worked at the #{link_to 'Translation
 p The original proof-of-concept version of BitTorious was sucessfully deployed and used, and was released under an Open Source license. Since then I've moved on to greener pastures, but have continued to update and maintain BitTorious as a general-purpose private BitTorrent tracker implementation.
 
 h2 Technology
-p BitTorious is built on Rails v4, jQuery and Bootstrap. If you're a Ruby developer interested in BitTorrent, I could always use a hand added support for new tracker specifications and portal features!
+p BitTorious is built on Rails v4, AngularJS and Bootstrap. If you're a Ruby developer interested in BitTorrent, I could always use a hand added support for new tracker specifications and portal features!
